Animation fix, changes in the converter
Animations are not relative to the original bone, but instead only relative to eachother.
Removed structural information of the skeletons accordingly.