@@ -10,6 +10,7 @@ import NG.Engine.GameTimer;
 import NG.Living.MonsterSoul;
 import NG.Living.SoulDescription;
 import NG.Rendering.Material;
+import NG.Rendering.MatrixStack.SGL;
 import NG.Rendering.Shapes.GenericShapes;
 import org.joml.Vector2i;
 import org.joml.Vector3f;
@@ -18,7 +19,6 @@ import org.joml.Vector3fc;
 import java.io.DataInput;
 import java.io.File;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.Map;
 
 /**
@@ -29,12 +29,12 @@ public class CubeMonster extends MonsterSoul {
     private static final BodyModel BODY_MODEL = BodyModel.CUBE;
 
     private final Map<AnimationBone, BoneElement> boneMap;
+    private final BoundingBox hitbox = new BoundingBox(-HALF_SIZE, -HALF_SIZE, 0, HALF_SIZE, HALF_SIZE, HALF_SIZE * 2);
 
     public CubeMonster(File description) throws IOException {
         super(new SoulDescription(description));
-        boneMap = Collections.singletonMap(
-                BODY_MODEL.getBone("cube_root"),
-                new BoneElement(GenericShapes.CUBE, new Vector3f(HALF_SIZE), Material.ROUGH)
+        boneMap = Map.of(BODY_MODEL.getBone("cube_root"),
+                new CubeElement(HALF_SIZE)
         );
     }
 
@@ -45,20 +45,17 @@ public class CubeMonster extends MonsterSoul {
 
     @Override
     protected MonsterEntity getNewEntity(Game game, Vector2i coordinate, Vector3fc direction) {
-        return new Entity(game, coordinate, direction, this, boneMap);
+        return new Entity(game, coordinate, direction, this);
     }
 
     /**
      * @author Geert van Ieperen created on 4-2-2019.
      */
-    public static class Entity extends MonsterEntity {
-        private BoundingBox hitbox;
-
+    public class Entity extends MonsterEntity {
         /** the direction this entity is facing relative to the world */
         private Pair<Vector3fc, Float> currentFace;
         /** the direction this entity is rotating to relative to the world */
         private Pair<Vector3fc, Float> targetFace;
-        private Map<AnimationBone, BoneElement> boneMap;
 
         /**
          * a default cube that can move and interact like any other monster
@@ -66,19 +63,14 @@ public class CubeMonster extends MonsterSoul {
          * @param initialCoordinate
          * @param faceDirection
          * @param controller
-         * @param boneMap
          */
         public Entity(
-                Game game, Vector2i initialCoordinate, Vector3fc faceDirection, CubeMonster controller,
-                Map<AnimationBone, BoneElement> boneMap
+                Game game, Vector2i initialCoordinate, Vector3fc faceDirection, CubeMonster controller
         ) {
             super(game, initialCoordinate, controller);
-            this.boneMap = boneMap;
 
             float gametime = game.get(GameTimer.class).getGametime();
             Vector3f eyeDir = new Vector3f(faceDirection);
-
-            this.hitbox = new BoundingBox(-HALF_SIZE, -HALF_SIZE, -HALF_SIZE, HALF_SIZE, HALF_SIZE, HALF_SIZE);
             this.currentFace = new Pair<>(eyeDir, gametime);
             this.targetFace = currentFace;
         }
@@ -132,6 +124,22 @@ public class CubeMonster extends MonsterSoul {
             currentFace = new Pair<>(getFaceRotation(gametime), gametime);
             float rotationSpeedRS = 0.1f;
             targetFace = new Pair<>(direction, gametime + angle / rotationSpeedRS);
+        }
+    }
+
+    private class CubeElement extends BoneElement {
+        private final float size;
+
+        CubeElement(float size) {
+            super(GenericShapes.CUBE, Material.ROUGH);
+            this.size = size;
+        }
+
+        @Override
+        public void draw(SGL gl, NG.Entities.Entity entity) {
+            gl.translate(0, 0, size);
+            gl.scale(size);
+            super.draw(gl, entity);
         }
     }
 }
